--- a/src/app/[lng]/globals.css
+++ b/src/app/[lng]/globals.css
@@ -25,6 +25,10 @@ img {
     scrollbar-width: none;
     /* Firefox */
   }
+
+  .underline-animation {
+    @apply relative w-fit after:absolute after:bottom-[-2px] after:left-0 after:h-[2px] after:w-0 after:bg-current after:transition-all after:duration-300 after:ease-in-out hover:after:w-full;
+  }
 }
 
 @layer base {
