default text color

--- a/src/app/[lng]/globals.css
+++ b/src/app/[lng]/globals.css
@@ -92,7 +92,7 @@ img {
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-[#141414];
   }
 }
 
