--- a/src/app/[lng]/globals.css
+++ b/src/app/[lng]/globals.css
@@ -27,7 +27,7 @@ img {
   }
 
   .underline-animation {
-    @apply relative w-fit after:absolute after:bottom-[-2px] after:left-0 after:h-[2px] after:w-0 after:bg-current after:transition-all after:duration-300 after:ease-in-out hover:after:w-full;
+    @apply relative w-fit after:absolute after:bottom-[-2px] after:left-0 after:h-px after:w-0 after:bg-current after:transition-all after:duration-300 after:ease-in-out hover:after:w-full;
   }
 }
 
