--- a/src/app/[lng]/globals.css
+++ b/src/app/[lng]/globals.css
@@ -119,3 +119,8 @@ img {
     height: 0;
   }
 }
+@layer base {
+  html[lang="zh"], html[lang="zh"] * {
+    font-family: 'PingFang SC', -apple-system, BlinkMacSystemFont, sans-serif;
+  }
+}
