update i18n to use zh-CN and en-US as name

--- a/src/app/[lng]/globals.css
+++ b/src/app/[lng]/globals.css
@@ -120,7 +120,7 @@ img {
   }
 }
 @layer base {
-  html[lang="zh"], html[lang="zh"] * {
+  html[lang="zh-CN"], html[lang="zh-CN"] * {
     font-family: 'PingFang SC', -apple-system, BlinkMacSystemFont, sans-serif;
   }
 }
